SinumerikLanguage/Generate/SinumerikParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/Petr/IdeaProjects/SimpleParser/src\Sinumerik.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class SinumerikParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, Println=17, 
		Print=18, Input=19, Assert=20, Size=21, Sin=22, ASin=23, Cos=24, ACos=25, 
		Tan=26, ATan=27, ATan2=28, Abs=29, Sqrt=30, Trunc=31, Pot=32, Mod=33, 
		Div=34, Round=35, Def=36, Proc=37, If=38, EndIf=39, Else=40, Return=41, 
		For=42, EndFor=43, While=44, EndWhile=45, GotoB=46, GotoF=47, Goto=48, 
		Trans=49, Atrans=50, Rot=51, Arot=52, Mirror=53, Amirror=54, Scale=55, 
		AScale=56, Diamon=57, Diamof=58, Diam90=59, Oriwks=60, Oriaxes=61, Traori=62, 
		Turn=63, Msg=64, Sblof=65, Sblon=66, Save=67, Displof=68, Displon=69, 
		To=70, End=71, SubProg=72, Null=73, MFunc=74, FFunc=75, SFunc=76, TFunc=77, 
		DFunc=78, Nnumb=79, Xaxis=80, Yaxis=81, Zaxis=82, Aaxis=83, Baxis=84, 
		Caxis=85, Uaxis=86, Vaxis=87, Waxis=88, Ivect=89, Jvect=90, Kvect=91, 
		ModeAC=92, ModeIC=93, Radius=94, Or=95, And=96, Equals=97, NEquals=98, 
		GTEquals=99, LTEquals=100, Pow=101, Excl=102, GT=103, LT=104, Add=105, 
		Subtract=106, Multiply=107, Divide=108, Modulus=109, OBrace=110, CBrace=111, 
		OBracket=112, CBracket=113, OParen=114, CParen=115, Assign=116, Comma=117, 
		QMark=118, Colon=119, Bool=120, Number=121, GCodeText=122, Identifier=123, 
		Labelstart=124, Mcodes=125, String=126, Comment=127, WHITESPACE=128, CR=129;
	public const int
		RULE_parse = 0, RULE_block = 1, RULE_statement = 2, RULE_assignment = 3, 
		RULE_vardefinition = 4, RULE_functionCall = 5, RULE_ifStatement = 6, RULE_ifStat = 7, 
		RULE_ifGotostat = 8, RULE_elseStat = 9, RULE_functionDecl = 10, RULE_forStatement = 11, 
		RULE_whileStatement = 12, RULE_gotoStatement = 13, RULE_returnStatement = 14, 
		RULE_idList = 15, RULE_exprList = 16, RULE_expression = 17, RULE_gcodeStatement = 18, 
		RULE_list = 19, RULE_varlist = 20, RULE_typeDef = 21, RULE_indexes = 22, 
		RULE_printvar = 23, RULE_metkaStart = 24, RULE_metkaDest = 25, RULE_crlfStatement = 26;
	public static readonly string[] ruleNames = {
		"parse", "block", "statement", "assignment", "vardefinition", "functionCall", 
		"ifStatement", "ifStat", "ifGotostat", "elseStat", "functionDecl", "forStatement", 
		"whileStatement", "gotoStatement", "returnStatement", "idList", "exprList", 
		"expression", "gcodeStatement", "list", "varlist", "typeDef", "indexes", 
		"printvar", "metkaStart", "metkaDest", "crlfStatement"
	};

	private static readonly string[] _LiteralNames = {
		null, "'NOT'", "'INT'", "'int'", "'STRING'", "'string'", "'REAL'", "'real'", 
		"'BOOL'", "'bool'", "'CHAR'", "'char'", "'AXIS'", "'axis'", "'FRAME'", 
		"'frame'", "'<<'", "'println'", "'print'", "'input'", "'assert'", "'size'", 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'end'", null, "'null'", null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "'=='", "'<>'", "'>='", "'<='", "'^'", "'!'", 
		"'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'%'", "'{'", "'}'", "'['", 
		"']'", "'('", "')'", "'='", "','", "'?'", "':'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "Println", "Print", "Input", "Assert", "Size", 
		"Sin", "ASin", "Cos", "ACos", "Tan", "ATan", "ATan2", "Abs", "Sqrt", "Trunc", 
		"Pot", "Mod", "Div", "Round", "Def", "Proc", "If", "EndIf", "Else", "Return", 
		"For", "EndFor", "While", "EndWhile", "GotoB", "GotoF", "Goto", "Trans", 
		"Atrans", "Rot", "Arot", "Mirror", "Amirror", "Scale", "AScale", "Diamon", 
		"Diamof", "Diam90", "Oriwks", "Oriaxes", "Traori", "Turn", "Msg", "Sblof", 
		"Sblon", "Save", "Displof", "Displon", "To", "End", "SubProg", "Null", 
		"MFunc", "FFunc", "SFunc", "TFunc", "DFunc", "Nnumb", "Xaxis", "Yaxis", 
		"Zaxis", "Aaxis", "Baxis", "Caxis", "Uaxis", "Vaxis", "Waxis", "Ivect", 
		"Jvect", "Kvect", "ModeAC", "ModeIC", "Radius", "Or", "And", "Equals", 
		"NEquals", "GTEquals", "LTEquals", "Pow", "Excl", "GT", "LT", "Add", "Subtract", 
		"Multiply", "Divide", "Modulus", "OBrace", "CBrace", "OBracket", "CBracket", 
		"OParen", "CParen", "Assign", "Comma", "QMark", "Colon", "Bool", "Number", 
		"GCodeText", "Identifier", "Labelstart", "Mcodes", "String", "Comment", 
		"WHITESPACE", "CR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Sinumerik.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SinumerikParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SinumerikParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SinumerikParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ParseContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(SinumerikParser.Eof, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parse; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.EnterParse(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.ExitParse(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISinumerikVisitor<TResult> typedVisitor = visitor as ISinumerikVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParse(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParseContext parse() {
		ParseContext _localctx = new ParseContext(Context, State);
		EnterRule(_localctx, 0, RULE_parse);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54; block();
			State = 55; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public FunctionDeclContext[] functionDecl() {
			return GetRuleContexts<FunctionDeclContext>();
		}
		public FunctionDeclContext functionDecl(int i) {
			return GetRuleContext<FunctionDeclContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISinumerikVisitor<TResult> typedVisitor = visitor as ISinumerikVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (((((_la - 17)) & ~0x3f) == 0 && ((1L << (_la - 17)) & ((1L << (Println - 17)) | (1L << (Sin - 17)) | (1L << (ASin - 17)) | (1L << (Cos - 17)) | (1L << (ACos - 17)) | (1L << (Tan - 17)) | (1L << (ATan - 17)) | (1L << (ATan2 - 17)) | (1L << (Abs - 17)) | (1L << (Sqrt - 17)) | (1L << (Trunc - 17)) | (1L << (Pot - 17)) | (1L << (Round - 17)) | (1L << (Def - 17)) | (1L << (Proc - 17)) | (1L << (If - 17)) | (1L << (For - 17)) | (1L << (While - 17)) | (1L << (GotoB - 17)) | (1L << (GotoF - 17)) | (1L << (Goto - 17)) | (1L << (Trans - 17)) | (1L << (Atrans - 17)) | (1L << (Rot - 17)) | (1L << (Arot - 17)) | (1L << (Mirror - 17)) | (1L << (Amirror - 17)) | (1L << (Scale - 17)) | (1L << (AScale - 17)) | (1L << (Diamon - 17)) | (1L << (Diamof - 17)) | (1L << (Diam90 - 17)) | (1L << (Oriwks - 17)) | (1L << (Oriaxes - 17)) | (1L << (Traori - 17)) | (1L << (Turn - 17)) | (1L << (Msg - 17)) | (1L << (Sblof - 17)) | (1L << (Sblon - 17)) | (1L << (Displof - 17)) | (1L << (Displon - 17)) | (1L << (SubProg - 17)) | (1L << (MFunc - 17)) | (1L << (FFunc - 17)) | (1L << (SFunc - 17)) | (1L << (TFunc - 17)) | (1L << (DFunc - 17)) | (1L << (Xaxis - 17)))) != 0) || ((((_la - 81)) & ~0x3f) == 0 && ((1L << (_la - 81)) & ((1L << (Yaxis - 81)) | (1L << (Zaxis - 81)) | (1L << (Aaxis - 81)) | (1L << (Baxis - 81)) | (1L << (Caxis - 81)) | (1L << (Uaxis - 81)) | (1L << (Vaxis - 81)) | (1L << (Waxis - 81)) | (1L << (Ivect - 81)) | (1L << (Jvect - 81)) | (1L << (Kvect - 81)) | (1L << (ModeAC - 81)) | (1L << (ModeIC - 81)) | (1L << (Radius - 81)) | (1L << (GCodeText - 81)) | (1L << (Identifier - 81)) | (1L << (Labelstart - 81)) | (1L << (CR - 81)))) != 0)) {
				{
				State = 59;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case Println:
				case Sin:
				case ASin:
				case Cos:
				case ACos:
				case Tan:
				case ATan:
				case ATan2:
				case Abs:
				case Sqrt:
				case Trunc:
				case Pot:
				case Round:
				case Def:
				case If:
				case For:
				case While:
				case GotoB:
				case GotoF:
				case Goto:
				case Trans:
				case Atrans:
				case Rot:
				case Arot:
				case Mirror:
				case Amirror:
				case Scale:
				case AScale:
				case Diamon:
				case Diamof:
				case Diam90:
				case Oriwks:
				case Oriaxes:
				case Traori:
				case Turn:
				case Msg:
				case Sblof:
				case Sblon:
				case Displof:
				case Displon:
				case SubProg:
				case MFunc:
				case FFunc:
				case SFunc:
				case TFunc:
				case DFunc:
				case Xaxis:
				case Yaxis:
				case Zaxis:
				case Aaxis:
				case Baxis:
				case Caxis:
				case Uaxis:
				case Vaxis:
				case Waxis:
				case Ivect:
				case Jvect:
				case Kvect:
				case ModeAC:
				case ModeIC:
				case Radius:
				case GCodeText:
				case Identifier:
				case Labelstart:
				case CR:
					{
					State = 57; statement();
					}
					break;
				case Proc:
					{
					State = 58; functionDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 63;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public VardefinitionContext vardefinition() {
			return GetRuleContext<VardefinitionContext>(0);
		}
		public GcodeStatementContext gcodeStatement() {
			return GetRuleContext<GcodeStatementContext>(0);
		}
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		public ForStatementContext forStatement() {
			return GetRuleContext<ForStatementContext>(0);
		}
		public WhileStatementContext whileStatement() {
			return GetRuleContext<WhileStatementContext>(0);
		}
		public IfGotostatContext ifGotostat() {
			return GetRuleContext<IfGotostatContext>(0);
		}
		public GotoStatementContext gotoStatement() {
			return GetRuleContext<GotoStatementContext>(0);
		}
		public MetkaStartContext metkaStart() {
			return GetRuleContext<MetkaStartContext>(0);
		}
		public CrlfStatementContext crlfStatement() {
			return GetRuleContext<CrlfStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISinumerikVisitor<TResult> typedVisitor = visitor as ISinumerikVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 75;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 64; assignment();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 65; vardefinition();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 66; gcodeStatement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 67; functionCall();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 68; ifStatement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 69; forStatement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 70; whileStatement();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 71; ifGotostat();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 72; gotoStatement();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 73; metkaStart();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 74; crlfStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(SinumerikParser.Identifier, 0); }
		public ITerminalNode Assign() { return GetToken(SinumerikParser.Assign, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public IndexesContext indexes() {
			return GetRuleContext<IndexesContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISinumerikVisitor<TResult> typedVisitor = visitor as ISinumerikVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 6, RULE_assignment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77; Match(Identifier);
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==OBracket) {
				{
				State = 78; indexes();
				}
			}

			State = 81; Match(Assign);
			State = 82; expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VardefinitionContext : ParserRuleContext {
		public ITerminalNode Def() { return GetToken(SinumerikParser.Def, 0); }
		public TypeDefContext typeDef() {
			return GetRuleContext<TypeDefContext>(0);
		}
		public VarlistContext[] varlist() {
			return GetRuleContexts<VarlistContext>();
		}
		public VarlistContext varlist(int i) {
			return GetRuleContext<VarlistContext>(i);
		}
		public VardefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vardefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.EnterVardefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.ExitVardefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISinumerikVisitor<TResult> typedVisitor = visitor as ISinumerikVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVardefinition(this);
			else return visitor.VisitChildren(this);
		}
	}
